# LLMTraderLab

./: GITHUB_ACTIONS_SETUP.md  README.md  backtest.py  backtest_evaluation.py  download_indices.py  evaluation.py  get_predict.py  pyproject.toml
.github/workflows/: daily-backtest.yml
data/: GSPC.csv  RUT.csv  backtest.csv  backtest_token_cost.csv  predict.csv  token_cost.csv
