[tool.poetry]
name = "llmtraderlab"
version = "0.1.0"
description = ""
package-mode = false
authors = ["Cheese <cheese.javaee@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
yfinance = "^0.2.65"
click = "^8.2.1"
dotenv = "^0.9.9"
litellm = "^1.74.3"


[tool.poetry.group.dev.dependencies]
socksio = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
